# OSM_ERP-app

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
app/docker/: entrypoint.sh
app/docs/: campaign.md  catalog.md  purchase.md
app/migrations/: env.py
app/migrations/versions/: 7c3e9a1f5d04_create_users_table.py  a1c4e7b93f02_create_customers_table.py  b7d2f5a81c43_create_trips_table.py  b8f2a1c04e91_create_products_table.py  c9e6a3d47b18_create_orders_tables.py  d3a1f9c20b57_create_sale_rounds_and_campaign_products.py  d5f8b2c61a94_add_receipt_kind.py  e2cc82ce8fb3_create_organizations_table.py
app/scripts/: seed_demo.py  seed_user.py
app/src/: main.py
app/src/app/: application.py
sale-intel/: .env.example  README.md  pyproject.toml
sale-intel/configs/sources/: bbw_us.yaml  macys_us.yaml  tommy_us.yaml
sale-intel/migrations/: env.py
sale-intel/migrations/versions/: 0001_initial_schema.py
sale-intel/scripts/: demo_ingest.py
sale-intel/src/: seed.py  settings.py  source_config.py
sale-intel/src/api/: main.py
sale-intel/src/collectors/: base.py  http.py  playwright.py  sources.py
sale-intel/src/db/: base.py  models.py  session.py
sale-intel/src/normalization/: normalizer.py  promotion_type.py
sale-intel/src/parsers/: base.py  bbw.py  html_common.py  macys.py  registry.py  tommy.py
sale-intel/src/services/: crawl.py  ingest.py  snapshots.py
sale-intel/src/storage/: base.py  factory.py  (+2 more)
sale-intel/tests/: conftest.py  test_normalizer.py  test_parsers.py
(+197 files in other folders)
