[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.138.2",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.51",
]
